--- a/manifest.json
+++ b/manifest.json
@@ -72,7 +72,22 @@
     "mp-toutiao" : {
         "usingComponents" : true
     },
-    "uniStatistics": {  
-        "enable": false
+    "uniStatistics" : {
+        "enable" : false
+    },
+    "h5" : {
+        "devServer" : {
+            "https" : false,
+			"proxy":{
+			"/api":{
+				"target":"http://127.0.0.1:8000",
+				"changeOrigin":true,
+				"secure":true,
+				"pathRewrite":{
+					"^/api":"/api"
+				}
+			}
+		}
+		}
     }
 }
